...
    <string name="contextmenu_image_share">Share image</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_copy">Copy image address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_save">Save image</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>

    <!-- This is a warning shown in the browser's context menu (when long pressing an image). %1$s will be replaced with the long name of the app (e.g. Firefox Focus). -->
    <string name="contextmenu_image_warning"><![CDATA[Saved and shared images <b>will not be deleted</b> when you erase %1$s history.]]></string>

    <!-- First run tour (Default browser): Title -->
    <string name="firstrun_defaultbrowser_title">Power up your privacy</string>
...

    * To understand what notification channels are, see: https://www.androidcentral.com/notification-channels
    * To see how this string will look like in Android's UI, see: https://github.com/mozilla-mobile/focus-android/issues/863#issuecomment-324105723
    -->
    <string name="notification_browsing_session_channel_description">Notifications let you erase your %1$s session with a tap. You don’t need to open the app or see what’s running in your browser.</string>

    <string name="tabs_tray_action_erase">Erase browsing history</string>

    <!-- If the user decides to open the current page in another browser and if Firefox is not installed then we show this
      item in the list of browsers. Clicking it will open the app store installed on the device (usually that's Google Play). -->
    <string name="download_firefox">Download Firefox</string>

    <!-- Text shown in the "Your rights" screen.
...
